--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -626,7 +626,6 @@ p, ul, ol, dl, table, blockquote, form {
 	}
 }
 
-
 @media screen and (max-width: 980px) {
 	.row {
 		display: flex;
@@ -2348,49 +2347,50 @@ ul.actions.special {
 	border: white;
 	border-width: 20px;
 }
+
 .progress-title {
-    font-size: 16px;
-    font-weight: 700;
-    color: #333;
-    margin: 0 0 20px
+	font-size: 16px;
+	font-weight: 700;
+	color: #333;
+	margin: 0 0 20px
 }
 
 .progress {
-    height: 20px;
-    background: #333;
-    border-radius: 0;
-    box-shadow: none;
-    margin-bottom: 30px;
-    overflow: visible
+	height: 20px;
+	background: #333;
+	border-radius: 0;
+	box-shadow: none;
+	margin-bottom: 30px;
+	overflow: visible
 }
 
 .progress .progress-bar {
-    position: relative;
-    -webkit-animation: animate-positive 2s;
-    animation: animate-positive 2s
+	position: relative;
+	-webkit-animation: animate-positive 2s;
+	animation: animate-positive 2s
 }
 
 .progress .progress-value {
-    display: block;
-    font-size: 18px;
-    font-weight: 500;
-    color: black;
-    position: absolute;
-    top: -30px;
-    right: -25px
+	display: block;
+	font-size: 18px;
+	font-weight: 500;
+	color: black;
+	position: absolute;
+	top: -30px;
+	right: -15px
 }
 
 .progress .progress-bar:after {
-    content: "";
-    display: inline-block;
-    width: 20px;
-    background: #fff;
-    position: absolute;
-    top: -5px;
-    bottom: -25px;
-    right: -5px;
-    /* z-index: 1; */
-    /* transform: rotate(35deg) */
+	content: "";
+	display: inline-block;
+	width: 20px;
+	background: #fff;
+	position: absolute;
+	top: -5px;
+	bottom: -25px;
+	right: -5px;
+	/* z-index: 1; */
+	/* transform: rotate(35deg) */
 }
 
 .service-logo {
@@ -2401,7 +2401,8 @@ ul.actions.special {
 	margin-right: 20px;
 	border: white;
 	border-width: 20px;
-	-webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+	-webkit-filter: grayscale(100%);
+	/* Safari 6.0 - 9.0 */
 	filter: grayscale(100%);
 }
 
@@ -2409,17 +2410,18 @@ ul.actions.special {
 	text-transform: capitalize;
 }
 
-
 header .item {
 	height: 100vh;
 	position: relative;
-  }
-  header .item img {
+}
+
+header .item img {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
-  }
-  header .item .cover {
+}
+
+header .item .cover {
 	padding: 75px 0;
 	position: absolute;
 	width: 100%;
@@ -2429,13 +2431,15 @@ header .item {
 	background: rgba(0, 0, 0, 0.6);
 	display: flex;
 	align-items: center;
-  }
-  header .item .cover .header-content {
+}
+
+header .item .cover .header-content {
 	position: relative;
 	padding: 56px;
 	overflow: hidden;
-  }
-  header .item .cover .header-content .line {
+}
+
+header .item .cover .header-content .line {
 	content: "";
 	display: inline-block;
 	width: 100%;
@@ -2446,58 +2450,66 @@ header .item {
 	border: 9px solid #fff;
 	-webkit-clip-path: polygon(0 0, 60% 0, 36% 100%, 0 100%);
 	clip-path: polygon(0 0, 60% 0, 36% 100%, 0 100%);
-  }
-  header .item .cover .header-content h2 {
+}
+
+header .item .cover .header-content h2 {
 	font-weight: 300;
 	font-size: 35px;
 	color: #fff;
-  }
-  header .item .cover .header-content h1 {
+}
+
+header .item .cover .header-content h1 {
 	font-size: 56px;
 	font-weight: 600;
 	margin: 5px 0 20px;
 	word-spacing: 3px;
 	color: #fff;
-  }
-  header .item .cover .header-content h4 {
+}
+
+header .item .cover .header-content h4 {
 	font-size: 24px;
 	font-weight: 300;
 	line-height: 36px;
 	color: #fff;
-  }
-  header .owl-item.active h1 {
+}
+
+header .owl-item.active h1 {
 	-webkit-animation-duration: 1s;
 	animation-duration: 1s;
 	-webkit-animation-fill-mode: both;
 	animation-fill-mode: both;
 	animation-name: fadeInDown;
 	animation-delay: 0.3s;
-  }
-  header .owl-item.active h2 {
+}
+
+header .owl-item.active h2 {
 	-webkit-animation-duration: 1s;
 	animation-duration: 1s;
 	-webkit-animation-fill-mode: both;
 	animation-fill-mode: both;
 	animation-name: fadeInDown;
 	animation-delay: 0.3s;
-  }
-  header .owl-item.active h4 {
+}
+
+header .owl-item.active h4 {
 	-webkit-animation-duration: 1s;
 	animation-duration: 1s;
 	-webkit-animation-fill-mode: both;
 	animation-fill-mode: both;
 	animation-name: fadeInUp;
 	animation-delay: 0.3s;
-  }
-  header .owl-item.active .line {
+}
+
+header .owl-item.active .line {
 	-webkit-animation-duration: 1s;
 	animation-duration: 1s;
 	-webkit-animation-fill-mode: both;
 	animation-fill-mode: both;
 	animation-name: fadeInLeft;
 	animation-delay: 0.3s;
-  }
-  header .owl-nav .owl-prev {
+}
+
+header .owl-nav .owl-prev {
 	position: absolute;
 	left: 15px;
 	top: 43%;
@@ -2512,18 +2524,22 @@ header .item {
 	display: block;
 	z-index: 1000;
 	border-radius: 0;
-  }
-  header .owl-nav .owl-prev span {
+}
+
+header .owl-nav .owl-prev span {
 	font-size: 1.6875rem;
 	color: #fff;
-  }
-  header .owl-nav .owl-prev:focus {
+}
+
+header .owl-nav .owl-prev:focus {
 	outline: 0;
-  }
-  header .owl-nav .owl-prev:hover {
+}
+
+header .owl-nav .owl-prev:hover {
 	background: #000 !important;
-  }
-  header .owl-nav .owl-next {
+}
+
+header .owl-nav .owl-next {
 	position: absolute;
 	right: 15px;
 	top: 43%;
@@ -2538,22 +2554,27 @@ header .item {
 	display: block;
 	z-index: 1000;
 	border-radius: 0;
-  }
-  header .owl-nav .owl-next span {
+}
+
+header .owl-nav .owl-next span {
 	font-size: 1.6875rem;
 	color: #fff;
-  }
-  header .owl-nav .owl-next:focus {
+}
+
+header .owl-nav .owl-next:focus {
 	outline: 0;
-  }
-  header .owl-nav .owl-next:hover {
+}
+
+header .owl-nav .owl-next:hover {
 	background: #000 !important;
-  }
-  header:hover .owl-prev {
+}
+
+header:hover .owl-prev {
 	left: 0px;
 	opacity: 1;
-  }
-  header:hover .owl-next {
+}
+
+header:hover .owl-next {
 	right: 0px;
 	opacity: 1;
-  }
+}
