--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,18 @@
 *{margin: 0; padding: 0;}
 
-.main-area {
+.banner {
     height: 30em;
     width: 100%;
     background-color: #808080;
-
     background-image: linear-gradient(to right, #000000, #808080);
+}
+
+.banner span {
+    color: white;
+    font-size: 500%;
+    font-family: "Courier New";
+    margin-left: 30%;
+}
+.about-me {
+
 }
