--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,32 @@
-*{margin: 0; padding: 0;}
-
-.banner {
-    height: 30em;
-    width: 100%;
-    background-color: #808080;
-    background-image: linear-gradient(to right, #000000, #808080);
-}
-
-.banner span {
+* {
+    margin: 0%;
+    padding: 0%;
     color: white;
-    font-size: 500%;
-    font-family: "Courier New";
-    margin-left: 30%;
 }
-.about-me {
 
+body {
+    background-image: url('../images/background-2.jpg');
+    /* background-image: linear-gradient(red, yellow); */
+    background-size: cover;
+}
+
+.outer-div {
+    margin: 0% 0%;
+    padding: 0% 0%;
+    display: flex;
+    position: absolute;
+    width: 100%;
+    height: 90%;
+}
+
+.navigation-section {
+    width: 20%;
+    /* background-color: aqua; */
+    display: grid;
+}
+
+.information {
+    /* background-color: red; */
+    width: 80%;
+    margin: 5%;
 }
