--- a/css/main.css
+++ b/css/main.css
@@ -1,32 +1,120 @@
 * {
-    margin: 0%;
-    padding: 0%;
-    color: white;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    background-image: url('../images/background-2.jpg');
-    /* background-image: linear-gradient(red, yellow); */
-    background-size: cover;
+  font-size: 4em;
+  color: white;
+}
+body .parallax-wrapper {
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: auto;
+  perspective: 300px;
+}
+body .parallax-wrapper .intro-screen {
+  height: 100vh;
+  background-image: linear-gradient(#ff9a9e, #fad0c4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+body .parallax-wrapper .outro-screen {
+  height: 100vh;
+  background-image: linear-gradient(#ffecd2, #fcb69f);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+body .parallax-wrapper .parallax-group {
+  position: relative;
+  height: 100vh;
+  transform-style: preserve-3d;
+}
+body .parallax-wrapper .parallax-group .parallax-layer {
+  position: absolute;
+  inset: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+body .parallax-wrapper .parallax-group .base-layer {
+  transform: translateZ(-300px) scale(2);
+}
+body .parallax-wrapper .parallax-group .mid-layer {
+  transform: translateZ(0);
+}
+body .parallax-wrapper .parallax-group .top-layer {
+  transform: translateZ(210px) scale(0.3);
+}
+body .parallax-wrapper #intro {
+  z-index: 0;
+}
+body .parallax-wrapper #group-1 {
+  z-index: -1;
+}
+body .parallax-wrapper #group-1 > .base-layer {
+  background-image: linear-gradient(#ff9a9e, #fecfef);
+}
+body .parallax-wrapper #group-2 > .mid-layer {
+  background-image: linear-gradient(#f5f7fa, #c3cfe2);
+}
+.topnav {
+  overflow: hidden;
+  background-color: rgba(255, 255, 255, 0);
+  position: absolute;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 10;
 }
 
-.outer-div {
-    margin: 0% 0%;
-    padding: 0% 0%;
-    display: flex;
+.topnav a {
+  float: left;
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #ddd;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+@media screen and (max-width: 600px) {
+  .topnav.responsive {
+    position: relative;
+  }
+  .topnav.responsive .icon {
     position: absolute;
-    width: 100%;
-    height: 90%;
-}
-
-.navigation-section {
-    width: 20%;
-    /* background-color: aqua; */
-    display: grid;
-}
-
-.information {
-    /* background-color: red; */
-    width: 80%;
-    margin: 5%;
-}
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}/*# sourceMappingURL=main.css.map */
